<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/Login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        />

    <LinearLayout
        android:id="@+id/login_email_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/login_email_sign_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@android:color/transparent"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/login_email_create_new_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateAccount"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>





    </LinearLayout>




</LinearLayout>