<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/postJournalImageView"
        android:layout_width="400dp"
        android:layout_height="229dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/image_three" />

    <TextView
        android:id="@+id/postJournal_username_textview"
        android:layout_width="131dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postJournalCameraButton" />

    <TextView
        android:id="@+id/post_Journal_date"
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:text="Today"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/postJournalImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postJournal_username_textview"
        app:layout_constraintVertical_bias="0.257" />

    <ImageView
        android:id="@+id/postJournalCameraButton"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/postJournalImageView"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/postJournal_title_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postJournalImageView" />

    <EditText
        android:id="@+id/postJournal_thought_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="@string/Thoughts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postJournal_title_edittext"
        app:layout_constraintVertical_bias="0.029" />

    <ProgressBar
        android:id="@+id/postJournalProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postJournal_thought_editText" />

    <Button
        android:id="@+id/postJournalsavebutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saveJournal"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postJournalProgressBar"
        app:layout_constraintVertical_bias="0.866"

        />

</androidx.constraintlayout.widget.ConstraintLayout>